<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linear_gradient_background"
    tools:context=".RealEstateDetailFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewMarsImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:src="@drawable/astronomer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/customRoundedImageView" />

    <TextView
        android:id="@+id/textViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/nunito"
        android:text="@string/id"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/ic_id"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMarsImage" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/price"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMarsImage" />

    <Button
        android:id="@+id/buttonBuyOrRent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/nunito"
        android:padding="15dp"
        android:text="@string/buy_or_rent"
        android:textAllCaps="false"
        android:textFontWeight="700"
        android:textSize="16sp"
        app:backgroundTint="@color/get_started_button_color"
        app:icon="@drawable/ic_shopping_cart"
        app:iconGravity="textStart"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
